subprojects {
    apply plugin: 'java'
    apply plugin: 'idea'
    group = 'org.smither.opwatch'
    version = '0.0.0'
    repositories {
        mavenCentral()
    }
    sourceCompatibility = 8
    targetCompatibility = 8
}